# kairos

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/docker-compose/: .env.example  .gitignore  Makefile  README.md
deploy/docker-compose/compose/: docker-compose.yml
deploy/docker-compose/config/kairos/: kairos-workloads.yaml
deploy/docker-compose/config/mimir/: recording-rules.yaml
deploy/docker-compose/scripts/: backup.sh  pull-images.sh  setup.ps1  setup.sh
deploy/grafana/alerts/: kairos-rules.yaml  pcap-rules.yaml
deploy/helm/kairos/: Chart.yaml  values-prod.yaml  values.yaml
deploy/helm/kairos/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  secret-external.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/helm/pcap/: Chart.yaml  values-prod.yaml  values.yaml
deploy/helm/pcap/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  secret-external.yaml  service.yaml  (+2 more)
deploy/kustomize/base/: kustomization.yaml  namespace.yaml
docs/: configuration.md  installation.md  keda-integration.md  keda-reference.md
docs/adr/: 0001-record-architecture-decisions.md  0002-prophet-with-statistical-fallback.md  0003-multi-llm-abstraction.md  0004-no-direct-cluster-writes.md  0005-redis-dedup-strategy.md
docs/runbooks/: github-rate-limit.md  kairos-down.md  llm-degraded.md  on-call.md  pcap-down.md
examples/demo/: README.md  docker-compose.yaml
examples/demo/gitops-repo/: README.md
examples/demo/mimir/: mimir.yaml
examples/demo/pcap-config/: demo-workloads.yaml
examples/demo/sample-app/: Dockerfile  README.md  app.py
examples/demo/seed/: feeder.py
examples/github-actions/: gitops-validate.yml  kairos-ci.yml  pcap-ci.yml
examples/keda/: scaledobject.yaml
examples/manifests/: deployment-dotnet.yaml  deployment-go.yaml  deployment-jvm.yaml  deployment-python.yaml
examples/promql/: queries.md
scripts/: bootstrap.sh  lint.sh
src/kairos/: __init__.py  __main__.py
src/kairos/api/: __init__.py  app.py  demo_pr.py  deps.py
src/kairos/collectors/: __init__.py  keda_collector.py  mimir_client.py  promql_library.py
src/kairos/config/: __init__.py  logging.py  settings.py
src/kairos/cost/: __init__.py  estimator.py
src/kairos/decision/: __init__.py  engine.py  policies.py  rules.py
src/kairos/discovery/: __init__.py  runtime_detector.py  workload_discovery.py
src/kairos/domain/: __init__.py  enums.py  exceptions.py  models.py
src/kairos/forecasting/: __init__.py  base.py  ensemble.py  feature_engineering.py  prophet_forecaster.py  seasonality.py  statistical_forecaster.py
src/kairos/gitops/: __init__.py  github_client.py  manifest_editor.py  pr_template.py  repo_layout.py
src/kairos/grafana/: __init__.py  alert_provisioner.py  contact_points.py  dashboard_builder.py  grafana_client.py
src/kairos/keda/: __init__.py  catalog.py  generator.py  validator.py
src/kairos/llm/: __init__.py  advisor.py  base.py  router.py
src/kairos/notify/: __init__.py  base.py  cloudevents_notifier.py  dispatcher.py  email.py  slack.py  teams.py
src/kairos/observability/: __init__.py  cloud_events.py  metrics.py  tracing.py
src/kairos/orchestrator/: __init__.py  pipeline.py  scheduler.py
src/kairos/resilience/: __init__.py  breakers.py
src/kairos/storage/: __init__.py  alerts.py  approvals.py  audit_store.py  db.py  dedup.py  env_profiles.py  redis_client.py  sql_audit_store.py
src/kairos/ui/: __init__.py  routes.py
src/pcap/: __init__.py  __main__.py
src/pcap/api/: __init__.py  app.py  demo_pr.py  deps.py
src/pcap/collectors/: __init__.py  keda_collector.py  mimir_client.py  promql_library.py
src/pcap/config/: __init__.py  logging.py  settings.py
src/pcap/decision/: __init__.py  engine.py  policies.py  rules.py
src/pcap/discovery/: __init__.py  runtime_detector.py  workload_discovery.py
src/pcap/domain/: __init__.py  enums.py  exceptions.py  models.py
src/pcap/forecasting/: __init__.py  base.py  ensemble.py  feature_engineering.py  prophet_forecaster.py  statistical_forecaster.py
src/pcap/gitops/: __init__.py  github_client.py  manifest_editor.py  pr_template.py  repo_layout.py
src/pcap/grafana/: __init__.py  alert_provisioner.py  dashboard_builder.py  grafana_client.py
src/pcap/llm/: __init__.py  advisor.py  base.py  router.py
src/pcap/notify/: __init__.py  base.py  dispatcher.py  email.py  slack.py  teams.py
src/pcap/observability/: __init__.py  metrics.py  middleware.py  tracing.py
src/pcap/orchestrator/: __init__.py  pipeline.py  scheduler.py
src/pcap/resilience/: __init__.py  breakers.py  retry.py  timeouts.py
src/pcap/storage/: __init__.py  approvals.py  audit_store.py  db.py  dedup.py  redis_client.py  sql_audit_store.py
src/pcap/ui/: __init__.py  routes.py
tests/: conftest.py
tests/e2e/: test_pipeline.py  test_ui_smoke.py
tests/integration/: test_api_smoke.py  test_github_pr.py  test_grafana_client.py  test_mimir_client.py
tests/unit/: test_api_health.py  test_approvals.py  test_cloudevents.py  test_cost_estimator.py  test_dashboard_builder.py  test_decision_engine.py  test_dedup.py  test_discovery.py  test_domain_models.py  test_forecasting.py  test_keda_package.py  test_llm_advisor.py  test_llm_redaction.py  test_manifest_editor.py  test_notify.py  test_pr_template.py  test_promql_library.py  test_runtime_detector.py  test_settings.py
(+62 files in other folders)
